--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1>Overflow</h1>
-					<p>By HTML5 UP</p>
+					<h1>KaliStore</h1>
+					<p>By Rami AlMshari</p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly-middle">Proceed as anticipated</a>
