--- a/index.html
+++ b/index.html
@@ -40,16 +40,78 @@
 			</section>
 
 		<!-- Feature 1 -->
-			<article id="first" class="container box style1 right">
-				<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-				<div class="inner">
-					<header>
-						<h2>Lorem ipsum<br />
-						dolor sit amet</h2>
-					</header>
-					<p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit tristique velit tempus etiam.</p>
-				</div>
-			</article>
+		     <!-- box apps -->
+          <!-- بداية التطبيق -->
+<div class="zeexpert bushafi">
+<div class="box-apps animated bounce">
+<div class="bushafi-az">
+<img class="imgae-apps" src="imgae/snapchat.png">
+</div>
+<div class="info-apps">
+<h4 style="color: #eb9316;" class="title-apps"> SnapChat ++</h4>
+<p class="info-azozz"> سناب شات بلس  </p>
+</div>
+<div class="azozz-zee">
+<p class="v-azozz "> 10.19.5 </p>
+<a class="azozz" href="" role="button" data-toggle="modal" data-target="#snapchat">تثبيت</a>
+  </div>      
+</div>
+</div>
+<!-- نهاية التطبيق -->
+
+    <!-- end box apps -->
+
+
+          <!-- box apps -->
+          <!-- بداية التطبيق -->
+<div class="zeexpert bushafi">
+<div class="box-apps animated bounce">
+<div class="bushafi-az">
+<img class="imgae-apps" src="imgae/scothman.png">
+</div>
+<div class="info-apps">
+<h4 style="color: #eb9316;" class="title-apps"> scothman </h4>
+<p class="info-azozz">سناب شات عثمان  </p>
+</div>
+<div class="azozz-zee">
+<p class="v-azozz "> 10.19.5 </p>
+<a class="azozz" href="" role="button" data-toggle="modal" data-target="#scothman">تثبيت</a>
+  </div>      
+</div>
+</div>
+<!-- نهاية التطبيق -->
+
+    <!-- end box apps -->
+
+
+
+ <!-- box apps -->
+          <!-- بداية التطبيق -->
+<div class="zeexpert bushafi">
+<div class="box-apps animated bounce">
+<div class="bushafi-az">
+<img class="imgae-apps" src="imgae/scothman.png">
+</div>
+<div class="info-apps">
+<h4 style="color: #eb9316;" class="title-apps"> scospoof </h4>
+<p class="info-azozz">سناب شات سبوف  </p>
+</div>
+<div class="azozz-zee">
+<p class="v-azozz "> 14.66 </p>
+<a class="azozz" href="" role="button" data-toggle="modal" data-target="#scospoof">تثبيت</a>
+  </div>      
+</div>
+</div>
+<!-- نهاية التطبيق -->
+
+    <!-- end box apps -->
+
+
+
+
+                 
+                 
+
 
 		<!-- Feature 2 -->
 			<article class="container box style1 left">
