--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE HTML>
-<!--
-	Overflow by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>KaliStore</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="https://azozztmp.com/download/AzozzTMP.css" >
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
@@ -39,7 +36,7 @@
 				</footer>
 			</section>
 
-		<!-- Feature 1 -->
+	
 		     <!-- box apps -->
           <!-- بداية التطبيق -->
 <div class="zeexpert bushafi">
