--- a/index.html
+++ b/index.html
@@ -22,13 +22,9 @@
 			</section>
 
 		<!-- Banner -->
-	
-				<header>
-					<h2> All App For Free</h2>
-				</header>
-                   
-
-	
+			</div>
+						</div>
+		
 		     <!-- box apps -->
 		
           <!-- بداية التطبيق -->
@@ -95,6 +91,15 @@
 <!-- نهاية التطبيق -->
 
     <!-- end box apps -->
+	</div>
+						</div>
+	</div>
+						</div>
+		
+		
+	
+		
+	
 
 
 
