--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 				<footer>
 					<a href="#banner" class="button style2 scrolly-middle">For App Plus</a>
 				</footer>
+				</div>
+		</div>
+	</div>
 			</section>
 
-		<!-- Banner -->
+	
 			</div>
 						</div>
 		
@@ -310,7 +313,6 @@
 			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
 	</body>
