--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="https://azozztmp.com/download/AzozzTMP.css" >
 		<link rel="stylesheet" href="assets/css/main.css" />
+		 <link rel="stylesheet" href="http://azozztmp.com/download/AzozzTMP.css">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+      <link rel="stylesheet" href="http://cdn.framework7.io/css/framework7-icons.css">
 	</head>
 	<body>
 
@@ -20,13 +23,13 @@
 					<a href="#banner" class="button style2 scrolly-middle">For App Plus</a>
 				</footer>
 				</div>
-		</div>
-	</div>
-			</section>
-
-	
-			</div>
-						</div>
+</dir>
+</dir>
+</dir>
+</dir>
+</dir>
+</dir>
+</dir>
 		
 		     <!-- box apps -->
 		
@@ -93,24 +96,11 @@
 </div>
 <!-- نهاية التطبيق -->
 
-    <!-- end box apps -->
-	</div>
-						</div>
-	</div>
-						</div>
-		
-		
-	
-		
-	
-
-
-
-
-                 
-                 
-
-
+</dir>
+</dir>
+</dir>
+</dir>
+</dir>
 
 		<!-- Contact -->
 			<article class="container box style3">
