--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>KaliStore</title>
+		<title>AlHaRbi StoR</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="https://azozztmp.com/download/AzozzTMP.css" >
@@ -12,17 +12,16 @@
       <link rel="stylesheet" href="http://cdn.framework7.io/css/framework7-icons.css">
 	</head>
 	<body>
-
-		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1>KaliStore</h1>
-					<p>By Rami AlMshari</p>
+					<h1>AlHaRbi StoR</h1>
+					<p>For App Plus</p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly-middle">For App Plus</a>
 				</footer>
-				</div>
+		</section>
+				
 </dir>
 </dir>
 </dir>
@@ -30,9 +29,7 @@
 </dir>
 </dir>
 </dir>
-		
-		     <!-- box apps -->
-		
+	
           <!-- بداية التطبيق -->
 <div class="zeexpert bushafi">
 <div class="box-apps animated bounce">
@@ -137,7 +134,7 @@
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
-					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; BAE88. All rights reserved.</li><li>Design: <a href="http://bae88.tk">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</section>
