--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 <div class="zeexpert bushafi">
 <div class="box-apps animated bounce">
 <div class="bushafi-az">
-<img class="imgae-apps" src="imgae/snapchat.png">
+<img class="imgae-apps" src="image/store.png">
 </div>
 <div class="info-apps">
-<h4 style="color: #eb9316;" class="title-apps"> SnapChat ++</h4>
+<h4 style="color: #eb9316;" class="title-apps"> AlHRBiStore</h4>
 <p class="info-azozz"> سناب شات بلس  </p>
 </div>
 <div class="azozz-zee">
@@ -56,7 +56,7 @@
 <div class="zeexpert bushafi">
 <div class="box-apps animated bounce">
 <div class="bushafi-az">
-<img class="imgae-apps" src="imgae/scothman.png">
+<img class="imgae-apps" src="image/snapchat.png">
 </div>
 <div class="info-apps">
 <h4 style="color: #eb9316;" class="title-apps"> scothman </h4>
@@ -134,7 +134,7 @@
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
-					<li>&copy; BAE88. All rights reserved.</li><li>Design: <a href="http://bae88.tk">HTML5 UP</a></li>
+					<li>&copy; BAE88. All rights reserved.</li><li>Design: <a href="http://bae88.tk">Kali</a></li>
 				</ul>
 			</div>
 		</section>
