Update index.html add snapchat ico + Twitter

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>AlHaRbi StoR</title>
+		<title>KaliStore</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="https://azozztmp.com/download/AzozzTMP.css" >
@@ -14,7 +14,7 @@
 	<body>
 			<section id="header">
 				<header>
-					<h1>AlHaRbi StoR</h1>
+					<h1>KaliStore</h1>
 					<p>For App Plus</p>
 				</header>
 				<footer>
@@ -126,15 +126,11 @@
 		<section id="footer">
 			<ul class="icons">
 				<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-				<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-				<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-				<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<a href="#" class="icon fa-snapchat"><span class="label">snapchat</span></a></li>
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
-					<li>&copy; BAE88. All rights reserved.</li><li>Design: <a href="http://bae88.tk">Kali</a></li>
+					<li>&copy;. All rights reserved For BAE88.tk .</li><li>Design: <a href="http://bae88.tk">Rami M.AlMshari</a></li>
 				</ul>
 			</div>
 		</section>
