Update index.html <head>

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 </dir>
 </dir>
 </dir>
+
+<head>
 	
           <!-- بداية التطبيق -->
 <div class="zeexpert bushafi">
@@ -92,6 +94,8 @@
 </div>
 </div>
 <!-- نهاية التطبيق -->
+
+</head>
 
 </dir>
 </dir>
